Make sure sticky nav is always visible

--- a/design-system.css
+++ b/design-system.css
@@ -376,7 +376,7 @@ pre {
 .topnav-sticky {
     grid-area: topnav;
     position: sticky;
-    z-index: 2;
+    z-index: 10;
     top: 0;
     place-content: center;
     height: var(--header-height);
